# Sentinel

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CHAT_SPECS.md  CLAUDE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  RELEASE.md  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
convex/: auth.config.ts  http.ts  schema.ts  subscriptions.ts  users.ts
convex/_generated/: api.d.ts
docs/: README.md  architecture.md  contributing.md  getting-started.md
docs/api/: README.md
docs/backend/: README.md
docs/features/: README.md
docs/frontend/: README.md
scripts/: bump-version.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: generate-installer-assets.py
src-tauri/src/: lib.rs  rate_limit.rs
src-tauri/src/ai/: client.rs  credentials.rs  http_client.rs  mod.rs  prompts.rs
src-tauri/src/ai/chat/: agent.rs  context.rs  mod.rs  openai_provider.rs  tests.rs  tool_conversion.rs  tools.rs  tools_terminal.rs
src-tauri/src/ai/grok/: client.rs  document_parser.rs  explore_agent.rs  integration.rs  mod.rs  openai_worker.rs  orchestrator.rs  pdf_renderer.rs  summarizer.rs  types.rs  utils.rs  vision.rs
src-tauri/src/ai/rules/: evaluator.rs  parser.rs
src-tauri/src/ai/v2/: agent_loop.rs  analytics.rs  architect.rs  builder.rs  compression.rs  local_vector_index.rs  mod.rs  prompts.rs  rate_limiter.rs  sampling.rs  tools.rs  vfs.rs
src-tauri/src/billing/: limits.rs  mod.rs  subscription.rs  types.rs  usage.rs
src-tauri/src/commands/: ai.rs  billing.rs  chat.rs  filesystem.rs  grok.rs  history.rs  jobs.rs  mod.rs  permissions.rs  photos.rs  vfs.rs  watcher.rs
src-tauri/src/execution/: executor.rs  mod.rs  state_validator.rs
src-tauri/src/file_coordination/: macos.rs  mod.rs
src-tauri/src/history/: checksum.rs  entry.rs  mod.rs  store.rs  undo.rs
src-tauri/src/jobs/: mod.rs
src-tauri/src/quarantine/: mod.rs
src-tauri/src/security/: command_sandbox.rs  cycle_detection.rs  mod.rs  regex_validator.rs
src-tauri/src/services/: thumbnails.rs  watcher.rs
src-tauri/src/vector/: embedder.rs
src-tauri/src/vfs/: node.rs  scanner.rs  simulator.rs
src-tauri/src/wal/: entry.rs  journal.rs  recovery.rs
src/components/: UsageSync.tsx
src/components/ChangesPanel/: AnalysisProgressBar.tsx  ChangesPanel.css  ChangesPanel.tsx  ConventionSelector.tsx  DynamicStatus.tsx  ExecutionProgress.tsx  InstructionInput.tsx  PhaseIndicator.tsx  PlanPreview.tsx  SimplificationPrompt.tsx  SimulationControls.tsx
src/components/ChatPanel/: ChatHeader.tsx  ChatInput.tsx  ChatPanel.tsx  ContextStack.tsx  InlineMentionDropdown.tsx  MentionPopover.tsx  MessageItem.tsx  MessageList.tsx  StreamingIndicator.tsx  ThoughtAccordion.tsx
src/components/ContextMenu/: ContextMenu.tsx
src/components/HistoryPanel/: ConflictList.tsx  HistoryPanel.tsx  SessionCard.tsx  UndoConfirmDialog.tsx  index.ts
src/components/PlanEditModal/: OperationEditRow.tsx  OperationGroupHeader.tsx  PlanEditFooter.tsx  PlanEditHeader.tsx  PlanEditModal.tsx  PlanEditToolbar.tsx  PlanEditTree.tsx  index.ts  planEditUtils.ts  usePlanEditState.ts
src/components/Settings/: SettingsPanel.tsx
src/components/Toast/: Toast.tsx  useToast.ts
src/components/UpdateDialog/: UpdateDialog.tsx
src/components/auth/: AuthGuard.tsx  AuthSync.tsx  DesktopAuthSync.tsx  UserMenu.tsx
src/components/dialogs/: AIRenameDialog.tsx  BatchRenameDialog.tsx  ConfirmDialog.tsx  ICloudErrorDialog.tsx  UpgradeDialog.tsx
src/components/downloads-watcher/: RenameHistoryPanel.tsx
src/components/drag-drop/: DragDropProvider.tsx
src/components/file-list/: FileColumnsView.tsx  FileGridView.tsx  FileListView.tsx  FileRow.tsx  InlineNameEditor.tsx
src/components/layout/: FinderLayout.tsx  Toolbar.tsx
src/components/photos/: Lightbox.tsx
src/components/subscription/: PlanBadge.tsx  UpgradePrompt.tsx  UsageMeter.tsx  index.ts
src/contexts/: DesktopAuthContext.tsx
src/hooks/: useAIRename.ts  useAutoRename.ts  useBatchRename.ts  useChatDropZone.ts  useDelete.ts  useDragDrop.ts  useExternalFileDrop.ts  useMergedEntries.ts  usePermissions.ts  useSyncedSettings.ts  useThumbnail.ts  useUnifiedAuth.ts  useUpdater.ts  useVfsChannel.ts
src/lib/: desktop-auth.ts  secure-storage.ts  utils.ts
src/lib/schemas/: auth.ts
src/stores/: chat-store.test.ts  chat-store.ts  downloads-watcher-store.ts  ghost-store.ts  history-store.ts  navigation-store.test.ts  organize-store.ts  settings-store.ts  subscription-store.test.ts  subscription-store.ts  toast-store.ts  update-store.ts  vfs-store.ts
src/stores/organize/: execution-store.ts  index.ts  (+5 more)
src/test/: setup.ts
src/types/: drag-drop.ts  history.ts  permissions.ts  photo.ts  plan-edit.ts  vfs.ts
web-auth/: package.json  vercel.json
web-auth/public/: index.html  privacy.html  terms.html
(+1 files in other folders)
