[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system watching
notify = "7"
notify-debouncer-full = "0.4"

# Safe deletion (cross-platform trash)
trash = "5"

# HTTP client for AI APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Async stream processing for SSE
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Platform directories (~/Downloads, etc.)
dirs = "6"

# Recursive directory traversal
walkdir = "2"

# MIME type detection
mime_guess = "2"

# Error handling
thiserror = "2"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# File time modification (for FSEvents triggering)
filetime = "0.2"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Secure credential storage (keychain/credential manager)
keyring = "3"

# Regex for command validation
regex = "1"

# Safe shell command execution for AI agent tools
duct = "0.13"

# Thumbnail generation
image = "0.25"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# SVG rendering
resvg = "0.44"
tauri-plugin-macos-permissions = "2.3.0"

# === V2 Dependencies ===
# Parallel directory scanning
jwalk = "0.8"

# Local embeddings for semantic search (no API key needed)
fastembed = "4"

# DAG for parallel execution
petgraph = "0.6"

# Async traits
async-trait = "0.1"

# Number of CPUs for parallelism
num_cpus = "1.16"

# Cross-platform file locking
fs2 = "0.4"

# Structured logging with filtering
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite for content cache
rusqlite = { version = "0.32", features = ["bundled"] }
dotenvy = "0.15.7"
pdf-extract = "0.10.0"
calamine = "0.32.0"
docx-rs = "0.4.18"
tauri-plugin-deep-link = "2.4.5"

# PDF rendering (optional, for full pdfium support)
# pdfium-render = { version = "0.8", features = ["image", "thread_safe"], optional = true }

[features]
default = []
pdfium = ["dep:pdfium-render"]
pdfium-bind = []

[dependencies.pdfium-render]
version = "0.8"
features = ["image", "thread_safe"]
optional = true

# macOS-specific dependencies for NSFileCoordinator
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
block2 = "0.5"

[dev-dependencies]
# Temporary directories for tests
tempfile = "3"

